# CompactBiPooling

./: .gitignore  BackLayer.lua  CMakeLists.txt  ComBiPooling.lua  CompactBiPooling.lua  CompactBilinearPooling.lua  L2Normalization.lua  README.md  SignedSquareRoot.lua  cbp.lua  cudafft.cu  init.lua  ssr.lua  test.lua
rocks/: cbp-1.0-1.rockspec  cbp-scm-1.rockspec  tcbp-1.0-1.rockspec
test/: test.lua
